<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/numbersTable">

    <TableRow
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button1"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/button1text"
            android:background="@color/colorNumberbackgorund"
            android:textColor="@color/colorNumbertext"
            android:textStyle="bold"
            android:fontFamily="cursive"
            />
        <Button
            android:id="@+id/button2"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/button2text"
            android:background="@color/colorNumberbackgorund"
            android:textColor="@color/colorNumbertext"
            android:textStyle="bold"
            android:fontFamily="cursive"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/button3text"
            android:background="@color/colorNumberbackgorund"
            android:textColor="@color/colorNumbertext"
            android:textStyle="bold"
            android:fontFamily="cursive"/>
    </TableRow>

    <TableRow
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button4"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/button4text"
            android:background="@color/colorNumberbackgorund"
            android:textColor="@color/colorNumbertext"
            android:textStyle="bold"
            android:fontFamily="cursive"/>
        <Button
            android:id="@+id/button5"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/button5text"
            android:background="@color/colorNumberbackgorund"
            android:textColor="@color/colorNumbertext"
            android:textStyle="bold"
            android:fontFamily="cursive"/>
        <Button
            android:id="@+id/button6"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/button6text"
            android:background="@color/colorNumberbackgorund"
            android:textColor="@color/colorNumbertext"
            android:textStyle="bold"
            android:fontFamily="cursive"/>
    </TableRow>

    <TableRow
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:background="@color/colorNumberbackgorund"
        android:textColor="@color/colorNumbertext"
        android:textStyle="bold"
        android:fontFamily="cursive">
        <Button
            android:id="@+id/button7"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/button7text"
            android:background="@color/colorNumberbackgorund"
            android:textColor="@color/colorNumbertext"
            android:textStyle="bold"
            android:fontFamily="cursive"/>
        <Button
            android:id="@+id/button8"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/button8text"
            android:background="@color/colorNumberbackgorund"
            android:textColor="@color/colorNumbertext"
            android:textStyle="bold"
            android:fontFamily="cursive"/>
        <Button
            android:id="@+id/button9"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/button9text"
            android:background="@color/colorNumberbackgorund"
            android:textColor="@color/colorNumbertext"
            android:textStyle="bold"
            android:fontFamily="cursive"/>
    </TableRow>

    <TableRow
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/buttonpercent"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/buttonpercenttext"
            android:background="@color/colorNumberbackgorund"
            android:textColor="@color/colorNumbertext"
            android:textStyle="bold"
            android:fontFamily="cursive"/>
        <Button
            android:id="@+id/button0"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/button0text"
            android:background="@color/colorNumberbackgorund"
            android:textColor="@color/colorNumbertext"
            android:textStyle="bold"
            android:fontFamily="cursive"/>
        <Button
            android:id="@+id/buttondot"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/buttondottext"
            android:background="@color/colorNumberbackgorund"
            android:textColor="@color/colorNumbertext"
            android:textStyle="bold"
            android:fontFamily="cursive"/>
    </TableRow>

</TableLayout>