<?xml version="1.0" encoding="utf-8"?>

<TableLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1">
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/buttonmodtext"
            android:onClick="opClick"
            android:background="@color/coloroperationbackground"
            android:textColor="@color/coloroperationtext"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/buttondivtext"
            android:onClick="opClick"
            android:background="@color/coloroperationbackground"
            android:textColor="@color/coloroperationtext"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/buttonmultext"
            android:onClick="opClick"
            android:background="@color/coloroperationbackground"
            android:textColor="@color/coloroperationtext"
            />
        <Button
            android:id="@+id/buttondel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="opClick"
            android:text="@string/buttondeltext"
            android:background="@color/coloroperationbackground"
            android:textColor="@color/coloroperationtext" />
    </TableRow>
    <TableRow android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="4">
        <fragment
            class="com.example.mohamed.boocalculator.numbersFragment"
            android:id="@+id/numfragment"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="3"
            tools:layout="@layout/fragment_number" />

        <LinearLayout
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="opClick"
                android:text="@string/buttonminustext"
                android:background="@color/coloroperationbackground"
                android:textColor="@color/coloroperationtext" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="opClick"
                android:text="@string/buttonplustext"
                android:background="@color/coloroperationbackground"
                android:textColor="@color/coloroperationtext" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2.6"
                android:onClick="opClick"
                android:text="@string/buttoneqtext"
                android:background="#227ce4"
                android:textColor="#fff" />
        </LinearLayout>
    </TableRow>
</TableLayout>
